--- a/RacunarskaProdavnicaLuka/pom.xml
+++ b/RacunarskaProdavnicaLuka/pom.xml
@@ -34,6 +34,11 @@
             <scope>provided</scope>
         </dependency>
         
+        <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20210307</version>
+    </dependency>
      
        
         <dependency>
